--- a/.env copy
+++ b/.env copy
@@ -1,2 +1,7 @@
-SUPABASE="eyJhbGciOiJIUzoyM4QHx6jZaufzixGVw_lxOM"
-RESEND="re_LhABxmnnXYqY"
+SUPABASE=eyJhbGciOiJIUzI1
+RESEND="re_LhxFm7g
+TWITTER_APP_TOKEN=aUYZyx3C6
+TWITTER_APP_SECRET=XSMAiCLc
+TWITTER_ACCESS_TOKEN=1694440287
+TWITTER_ACCESS_SECRET=DcbFJaF5k
+```
