--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "resend": "^1.0.0",
+    "twitter-api-v2": "^1.15.1",
     "viem": "^1.6.4"
   },
   "type": "module"
