--- a/.env copy
+++ b/.env copy
@@ -4,4 +4,4 @@ TWITTER_APP_TOKEN=aUYZyx3C6
 TWITTER_APP_SECRET=XSMAiCLc
 TWITTER_ACCESS_TOKEN=1694440287
 TWITTER_ACCESS_SECRET=DcbFJaF5k
-```
+EMAIL=mail@gmail.com
